# hexagons

./: .gitignore  CMakeLists.txt  Makefile  README.md  TLML.sublime-syntax  hexagons.sln  hexagons.vcxproj  hexagons.vcxproj.filters  linux_make.sh  log.py  make.bat  todo.md
assets/: en-us.tlml  langs.tlml  pl-pl.tlml
assets/maps/: green_valley.json
docs/: assets.md  localization.md  pool.md  ui-animations.md  ui-elements.md  ui-system.md  ui-text.md
include/: addon.h  assetload.hpp  assets.hpp  debug.hpp  delegate  div.hpp  flags.hpp  game.hpp  mathext.hpp  menu.hpp  pool  pool.hpp  random.hpp  refpool  ui.hpp
include/dev/: dev_game.hpp  dev_move.hpp  dev_panel.hpp
include/eos/: EOSManager.hpp  HWID.hpp  LobbyManager.hpp  P2PManager.hpp  PlatformManager.hpp
include/game/: array.hpp  bot_ai.hpp  build.hpp  draw.hpp  entity.hpp  funcs.hpp  game.hpp  hex.hpp  history.hpp  loader.hpp  map.hpp  moves.hpp  plant.hpp  region.hpp  skill.hpp  spread.hpp  template.hpp  tile.hpp  troop.hpp
include/game/draw/: build_draw.hpp  entity_draw.hpp  hex_draw.hpp  plant_draw.hpp  troop_draw.hpp
include/game/logic/: build_logic.hpp  effect_types.hpp  plant_logic.hpp  skill_array.hpp  skill_helper.hpp  skill_list.hpp  skill_types.hpp  troop_logic.hpp  turn_logic.hpp
include/game/moves/: entity_effect.hpp  entity_place.hpp  entity_withdraw.hpp  game_turn.hpp  move.hpp  plant_cut.hpp  plant_modify.hpp  radius_effect.hpp  troop_attack.hpp  troop_heal.hpp  troop_merge.hpp  troop_move.hpp  troop_moves.hpp
include/game/serialize/: entities.hpp  general.hpp  map.hpp  messages.hpp  moves.hpp
include/game/sync/: adapter.hpp  ai.hpp  messages.hpp  net.hpp  network_adapter.hpp  state.hpp  test.hpp
include/game/ui/: action_button.hpp  chat.hpp  editor.hpp  game_panel.hpp  hex_preview.hpp  map_loader.hpp  move_selector.hpp  progress_view.hpp  resource_bar.hpp  resource_table.hpp  splash_text.hpp  state_viewer.hpp
include/game/values/: build_values.hpp  editor_values.hpp  entity_values.hpp  hex_values.hpp  interface.hpp  names.hpp  plant_values.hpp  shared.hpp  skill_values.hpp  textures.hpp  troop_values.hpp
include/localization/: error.hpp  parser.hpp  token.hpp
include/logging/: log.hpp
include/menu/: gameJoinMenu.hpp  gameStartMenu.hpp  lobbyMenu.hpp  mainMenu.hpp  optionsMenu.hpp  text_field_open.hpp
include/menu/ui/: alertPopup.hpp  menuButton.hpp
include/networking/: AuthManager.hpp  Delegate.hpp.old  GameConnectionManager.hpp  HWID.hpp  LobbyManager.hpp  LoggingManager.hpp  Net.hpp  P2PManager.hpp  PlatformManager.hpp
include/networking_remake/: AuthManager.hpp  EOSManager.hpp  GameConnectionManager.hpp  HWID.hpp  LobbyManager.hpp  Net.hpp  P2PManager.hpp  threadsafe_queue.hpp
include/templated/: delegate.hpp  pool.hpp  refpool.hpp
include/ui/: align.hpp  buffer.hpp  button.hpp  camera.hpp  drag.hpp  element.hpp  event.hpp  exit.hpp  image.hpp  input.hpp  layer.hpp  pages.hpp  panel.hpp  solid.hpp  text.hpp  textfield.hpp  units.hpp  window.hpp
include/ui/anim/: base.hpp  easing.hpp  linear.hpp  setter.hpp  timer.hpp
prezentacje/: Progress IO - 7-8.pptx  Progress IO 4-5.pptx  Progress IO 6-7.pptx
src/: addon.cpp  assetload.cpp  assets.cpp  debug.cpp  div.cpp  flags.cpp  game.cpp  game.hpp  hex.hpp  main.cpp  map.hpp  mathext.cpp  menu.cpp  pool.hpp  random.cpp  troop.hpp
src/eos/: EOSManager.cpp  HWID.cpp  LobbyManager.cpp  LoggingManager.cpp  P2PManager.cpp  PlatformManager.cpp
src/game/: array.cpp  bot_ai.cpp  build.cpp  draw.cpp  entity.cpp  funcs.cpp  game.cpp  hex.cpp  history.cpp  loader.cpp  map.cpp  plant.cpp  region.cpp  skill.cpp  spread.cpp  template.cpp  troop.cpp
src/game/dev/: dev_game.cpp  dev_move.cpp  dev_panel.cpp
src/game/draw/: build_draw.cpp  entity_draw.cpp  hex_draw.cpp  map.cpp  plant_draw.cpp  troop_draw.cpp
src/game/logic/: build_logic.cpp  plant_logic.cpp  skill_helper.cpp  skill_list.cpp  troop_logic.cpp  turn_logic.cpp
src/game/logic/lists/: skill_list_attack.cpp  skill_list_effect.cpp  (+3 more)
src/game/moves/: entity_effect.cpp  entity_moves.cpp  entity_place.cpp  entity_withdraw.cpp  game_turn.cpp  move.cpp  plant_cut.cpp  plant_modify.cpp  radius_effect.cpp  troop_attack.cpp  troop_heal.cpp  troop_merge.cpp  troop_move.cpp  troop_moves.cpp
src/game/serialize/: s_entities.cpp  s_general.cpp  s_map.cpp  s_messages.cpp  s_moves.cpp
src/game/sync/: adapter.cpp  ai.cpp  messages.cpp  net.cpp  state.cpp  test.cpp
src/game/ui/: action_button.cpp  chat.cpp  editor.cpp  game_panel.cpp  hex_preview.cpp  map_loader.cpp  move_selector.cpp  progress_view.cpp  resource_bar.cpp  resource_table.cpp  splash_text.cpp  state_viewer.cpp
src/game/values/: build_values.cpp  editor_values.cpp  entity_values.cpp  hex_values.cpp  interface.cpp  names.cpp  plant_values.cpp  shared.cpp  skill_values.cpp  textures.cpp  troop_values.cpp
src/localization/: error.cpp  parser.cpp  token.cpp
src/logging/: log.cpp
src/menu/: gameJoinMenu.cpp  gameStartMenu.cpp  lobbyMenu.cpp  mainMenu.cpp  optionsMenu.cpp
src/menu/ui/: alertPopup.cpp  menuButton.cpp
src/networking/: AuthManager.cpp  EOSManager.cpp  GameConnectionManager.cpp  HWID.cpp  LobbyManager.cpp  LoggingManager.cpp  Net.cpp  P2PManager.cpp  PlatformManager.cpp
src/networking_remake/: AuthManager.cpp  EOSManager.cpp  GameConnectionManager.cpp  HWID.cpp  LobbyManager.cpp  LoggingManager.cpp  Net.cpp  P2PManager.cpp  PlatformManager.cpp
src/ui/: align.cpp  buffer.cpp  buffer.hpp  button.cpp  camera.cpp  drag.cpp  element.cpp  element.hpp  event.cpp  events.hpp  exit.cpp  image.cpp  input.cpp  layer.cpp  layer.hpp  pages.cpp  panel.cpp  panel.hpp  solid.cpp  text.cpp  textfield.cpp  units.cpp  units.hpp  window.cpp
src/ui/anim/: base.cpp  easing.cpp  setter.cpp  timer.cpp
tests/: hexarray_fuzz.cpp  hexarray_tests.cpp  localization_tests.cpp  mathext_fuzz.cpp  mathext_fuzz_stubs.cpp  mathext_tests.cpp  messages_light_tests.cpp  parser_integration_tests.cpp  perf_dim.cpp  perf_random.cpp  random_tests.cpp  spread_component_tests.cpp  test_menu_system.cpp  ui_units_tests.cpp
